vbnc/vbnc/tests/Errors/30530-3.vb
MustInherit Class ArgumentTypeInference
    Sub a(ByVal a As Integer)

    End Sub
    ReadOnly Property c(ByVal c As Integer) As Boolean
        Get
            Return False
        End Get
    End Property
End Class